// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb should render <Breadcrumb /> 1`] = `
<div
  className="root"
>
  <ul
    className="list"
  >
    <li
      className="item selectedItem"
    >
      <a
        className="link"
        dangerouslySetInnerHTML={
          Object {
            "__html": "home",
          }
        }
        onClick={[Function]}
      />
    </li>
  </ul>
</div>
`;

exports[`Breadcrumb should render <Breadcrumb /> with a single item 1`] = `
<div
  className="root noRefinementRoot"
>
  <ul
    className="list"
  >
    <li
      className="item"
    >
      <a
        className="link"
        dangerouslySetInnerHTML={
          Object {
            "__html": "home",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="item selectedItem"
      key="label00"
    >
      <span
        aria-hidden={true}
        className="separator"
        dangerouslySetInnerHTML={
          Object {
            "__html": ">",
          }
        }
      />
      label0
    </li>
  </ul>
</div>
`;

exports[`Breadcrumb should render <Breadcrumb /> with items 1`] = `
<div
  className="root noRefinementRoot"
>
  <ul
    className="list"
  >
    <li
      className="item"
    >
      <a
        className="link"
        dangerouslySetInnerHTML={
          Object {
            "__html": "home",
          }
        }
        onClick={[Function]}
      />
    </li>
    <li
      className="item"
      key="label00"
    >
      <span
        aria-hidden={true}
        className="separator"
        dangerouslySetInnerHTML={
          Object {
            "__html": ">",
          }
        }
      />
      <a
        className="link"
        onClick={[Function]}
      >
        label0
      </a>
    </li>
    <li
      className="item selectedItem"
      key="label11"
    >
      <span
        aria-hidden={true}
        className="separator"
        dangerouslySetInnerHTML={
          Object {
            "__html": ">",
          }
        }
      />
      label1
    </li>
  </ul>
</div>
`;
